docs/_results/run1/hpctoolkit/logs/hpctoolkit-2018.12.28-memkind-experiment.err
==> Warning: memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr failed to install
==> Error: memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr: Package was not installed
==> Warning: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66 failed to install
==> Error: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66: Package was not installed
==> Warning: memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg failed to install
==> Error: memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg: Package was not installed
Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
/var/spool/slurmd/job100446/slurm_script: line 12: 12376 Killed                  spliced splice --package hpctoolkit@2018.12.28 --splice memkind --runner spack --replace memkind --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/hpctoolkit/2018.12.28/memkind/experiment.json
==> Error: Failed to upgrade to a write lock for memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr due to LockUpgradeError: Cannot upgrade lock from read to write on file: /p/vast1/build/spack/opt/spack/.spack-db/prefix_lock
==> Warning: AssertionError exception when releasing read lock for memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr: 
==> Warning: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66 failed to install
==> Warning: AssertionError exception when releasing read lock for memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66: 
==> Error: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66: Package was not installed
==> Error: ProcessError: Command exited with status 2:
    'make' '-j16' 'V=1'

9 errors found in build log:
     610    libtoolize: copying file 'm4/ltoptions.m4'
     611    libtoolize: copying file 'm4/ltsugar.m4'
     612    libtoolize: copying file 'm4/ltversion.m4'
     613    libtoolize: copying file 'm4/lt~obsolete.m4'
     614    libtoolize: Consider adding 'AC_CONFIG_MACRO_DIRS([m4])' to configu
            re.ac,
     615    libtoolize: and rerunning libtoolize and aclocal.
  >> 616    configure.ac:38: installing './ar-lib'
  >> 617    configure.ac:38: installing './compile'
  >> 618    configure.ac:43: installing './config.guess'
  >> 619    configure.ac:43: installing './config.sub'
  >> 620    configure.ac:34: installing './install-sh'
  >> 621    configure.ac:34: installing './missing'
     622    Makefile.am: installing './depcomp'
     623    parallel-tests: installing './test-driver'
     624    ==> memkind: Executing phase: 'configure'
     625    ==> [2022-03-03-00:43:19.373189] './configure' '--prefix=/p/vast1/b
            uild/spack/opt/spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.8.0
            -velx4xpejyznrmxtzr7vgugshmy2svjg'
     626    checking for a BSD-compatible install... /usr/bin/install -c
     627    checking whether build environment is sane... yes

     ...

     905    /bin/sh ./libtool  --tag=CC   --mode=link /p/vast1/build/spack/lib/
            spack/env/gcc/gcc -fvisibility=hidden -Wall -Werror -msse4.2 -D_GNU
            _SOURCE -DMEMKIND_INTERNAL_API -DJE_PREFIX= -g -O2 -pthread -fstack
            -protector -D_FORTIFY_SOURCE=2  -Wl,-z,relro,-z,now -o examples/pme
            m_free_with_unknown_kind examples/pmem_free_with_unknown_kind.o lib
            memkind.la -lnuma
     906    libtool: compile:  /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAV
            E_CONFIG_H -I. -I./include -I./jemalloc/obj/include -Itest/gtest_fu
            sed "-DMEMKIND_DEPRECATED(x)=x" -fvisibility=hidden -Wall -Werror -
            msse4.2 -D_GNU_SOURCE -DMEMKIND_INTERNAL_API -DJE_PREFIX= -g -O2 -p
            thread -fstack-protector -D_FORTIFY_SOURCE=2 -MT autohbw/autohbw.lo
             -MD -MP -MF autohbw/.deps/autohbw.Tpo -c autohbw/autohbw.c -o auto
            hbw/autohbw.o >/dev/null 2>&1
     907    libtool: link: /p/vast1/build/spack/lib/spack/env/gcc/gcc -fvisibil
            ity=hidden -Wall -Werror -msse4.2 -D_GNU_SOURCE -DMEMKIND_INTERNAL_
            API -DJE_PREFIX= -g -O2 -pthread -fstack-protector -D_FORTIFY_SOURC
            E=2 -Wl,-z -Wl,relro -Wl,-z -Wl,now -o examples/.libs/pmem_multithr
            eads_onekind examples/pmem_multithreads_onekind.o  ./.libs/libmemki
            nd.so -ldl -lnuma -pthread -Wl,-rpath -Wl,/p/vast1/build/spack/opt/
            spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.8.0-velx4xpejyznrm
            xtzr7vgugshmy2svjg/lib
     908    libtool: link: /p/vast1/build/spack/lib/spack/env/gcc/gcc -fvisibil
            ity=hidden -Wall -Werror -msse4.2 -D_GNU_SOURCE -DMEMKIND_INTERNAL_
            API -DJE_PREFIX= -g -O2 -pthread -fstack-protector -D_FORTIFY_SOURC
            E=2 -Wl,-z -Wl,relro -Wl,-z -Wl,now -o examples/.libs/pmem_free_wit
            h_unknown_kind examples/pmem_free_with_unknown_kind.o  ./.libs/libm
            emkind.so -ldl -lnuma -pthread -Wl,-rpath -Wl,/p/vast1/build/spack/
            opt/spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.8.0-velx4xpejy
            znrmxtzr7vgugshmy2svjg/lib
     909    In file included from examples/pmem_cpp_allocator.cpp:34:
     910    ./include/pmem_allocator.h: In constructor 'pmem::internal::kind_wr
            apper_t::kind_wrapper_t(const char*, std::size_t)':
  >> 911    ./include/pmem_allocator.h:56:32: error: 'runtime_error' is not a m
            ember of 'std'
     912       56 |                     throw std::runtime_error(
     913          |                                ^~~~~~~~~~~~~
     914    /bin/sh ./libtool  --tag=CXX   --mode=link /p/vast1/build/spack/lib
            /spack/env/gcc/g++ -fvisibility=hidden -Wall -Werror -msse4.2 -D_GN
            U_SOURCE -DMEMKIND_INTERNAL_API -DJE_PREFIX= -g -O2  -Wl,-z,relro,-
            z,now -o examples/memkind_allocated examples/memkind_allocated_exam
            ple.o libmemkind.la -lnuma
     915    /bin/sh ./libtool  --tag=CC   --mode=link /p/vast1/build/spack/lib/
            spack/env/gcc/gcc -fvisibility=hidden -Wall -Werror -msse4.2 -D_GNU
            _SOURCE -DMEMKIND_INTERNAL_API -DJE_PREFIX= -g -O2 -pthread -fstack
            -protector -D_FORTIFY_SOURCE=2  -Wl,-z,relro,-z,now -o autohbw/liba
            utohbw.la -rpath /p/vast1/build/spack/opt/spack/linux-rhel7-broadwe
            ll/gcc-10.2.1/memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg/lib au
            tohbw/autohbw.lo libmemkind.la -lnuma
     916    /bin/sh ./libtool  --tag=CC   --mode=link /p/vast1/build/spack/lib/
            spack/env/gcc/gcc -fvisibility=hidden -Wall -Werror -msse4.2 -D_GNU
            _SOURCE -DMEMKIND_INTERNAL_API -DJE_PREFIX= -g -O2 -pthread -fstack
            -protector -D_FORTIFY_SOURCE=2  -Wl,-z,relro,-z,now -o test/libauto
            hbw.la  autohbw/autohbw.lo  -lnuma
     917    libtool: link: ar cru test/.libs/libautohbw.a autohbw/.libs/autohbw
            .o
     918    libtool: link: ranlib test/.libs/libautohbw.a
     919    libtool: link: ( cd "test/.libs" && rm -f "libautohbw.la" && ln -s 
            "../libautohbw.la" "libautohbw.la" )
     920    libtool: link: /p/vast1/build/spack/lib/spack/env/gcc/gcc -shared  
            -fPIC -DPIC  autohbw/.libs/autohbw.o   -Wl,-rpath -Wl,/tmp/sochat1/
            spack-stage/spack-stage-memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2s
            vjg/spack-src/.libs -Wl,-rpath -Wl,/p/vast1/build/spack/opt/spack/l
            inux-rhel7-broadwell/gcc-10.2.1/memkind-1.8.0-velx4xpejyznrmxtzr7vg
            ugshmy2svjg/lib ./.libs/libmemkind.so -ldl -lnuma  -msse4.2 -g -O2 
            -pthread -fstack-protector -Wl,-z -Wl,relro -Wl,-z -Wl,now   -pthre
            ad -Wl,-soname -Wl,libautohbw.so.0 -o autohbw/.libs/libautohbw.so.0
            .0.0
     921    libtool: link: /p/vast1/build/spack/lib/spack/env/gcc/g++ -fvisibil
            ity=hidden -Wall -Werror -msse4.2 -D_GNU_SOURCE -DMEMKIND_INTERNAL_
            API -DJE_PREFIX= -g -O2 -Wl,-z -Wl,relro -Wl,-z -Wl,now -o examples
            /.libs/memkind_allocated examples/memkind_allocated_example.o  ./.l
            ibs/libmemkind.so -ldl -lnuma -pthread -Wl,-rpath -Wl,/p/vast1/buil
            d/spack/opt/spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.8.0-ve
            lx4xpejyznrmxtzr7vgugshmy2svjg/lib
  >> 922    make[1]: *** [examples/pmem_cpp_allocator.o] Error 1
     923    make[1]: *** Waiting for unfinished jobs....
     924    libtool: link: (cd "autohbw/.libs" && rm -f "libautohbw.so.0" && ln
             -s "libautohbw.so.0.0.0" "libautohbw.so.0")
     925    libtool: link: (cd "autohbw/.libs" && rm -f "libautohbw.so" && ln -
            s "libautohbw.so.0.0.0" "libautohbw.so")
     926    libtool: link: ar cru autohbw/.libs/libautohbw.a  autohbw/autohbw.o
     927    libtool: link: ranlib autohbw/.libs/libautohbw.a
     928    libtool: link: ( cd "autohbw/.libs" && rm -f "libautohbw.la" && ln 
            -s "../libautohbw.la" "libautohbw.la" )
     929    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-me
            mkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg/spack-src'
  >> 930    make: *** [all] Error 2

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg/spack-build-out.txt

Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
